# DE_FP_S3toRDS

./: DataExtraction.py  DataInsertion.py  FileExtraction.py  README.md  dataConfig.py  dict.pickle  lambdaFunction.py  pyproject.toml  requirementsALL.txt
data/companyFacts/: CIK0000001961.json  CIK0000002098.json  CIK0000002178.json  CIK0000002186.json  CIK0000002488.json  CIK0000003197.json  CIK0000003453.json  CIK0000003499.json  CIK0000003545.json  CIK0000003570.json  CIK0000004127.json  CIK0000004281.json  CIK0000004447.json  CIK0000004457.json  CIK0000004962.json  CIK0000004977.json  CIK0000005513.json  CIK0000005981.json  CIK0000006176.json  CIK0000006201.json  CIK0000006281.json  CIK0000006769.json  CIK0000006845.json  CIK0000006951.json  CIK0000006955.json  CIK0000007084.json  CIK0000007332.json  CIK0000007431.json  CIK0000007536.json  CIK0000007623.json  CIK0000008063.json  CIK0000008146.json  CIK0000008177.json  CIK0000008504.json  CIK0000008670.json  CIK0000008818.json  CIK0000008858.json  CIK0000008868.json  CIK0000008947.json  CIK0000009092.json  (+6427 more)
